--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="false"
-            android:checkedButton="@+id/topBTN"
+            android:checkedButton="@+id/equalsBTN"
             android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/equalsBTN"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Equals" />
 
             <RadioButton
                 android:id="@+id/topBTN"
@@ -56,15 +65,6 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Friends" />
-
-            <RadioButton
-                android:id="@+id/equalsBTN"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Equals" />
 
             <RadioButton
                 android:id="@+id/lastBTN"
@@ -200,7 +200,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/victoriasTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -209,7 +209,7 @@
                         android:textColor="@android:color/background_light" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/derrotasTV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
