--- a/app/src/main/res/layout/lista_principal.xml
+++ b/app/src/main/res/layout/lista_principal.xml
@@ -117,7 +117,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/listavictoriasTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -125,7 +125,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/listaderrotasTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
