Actualizacion SIM. Pantalla inicio y botones navegacion

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ff000000"
     android:orientation="vertical"
     tools:context="jlp.sim.MainActivity">
 
@@ -12,68 +13,105 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="20"
-        android:background="@android:color/background_light"
-        android:gravity="center_horizontal"
+        android:layout_weight="15"
+        android:background="@drawable/almenas"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SIM"
-            android:textAlignment="center"
-            android:textSize="24sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="90"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Strenght * Inteligence * Magic" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="9"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/logoTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="monospace"
+                    android:text="Reto RPG"
+                    android:textAlignment="center"
+                    android:textColor="#fff17a0a"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lema"
+                    android:textAlignment="center"
+                    android:textColor="#fff17a0a" />
+
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/menuBTN"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:onClick="menuOpciones"
+                app:srcCompat="@drawable/menu" />
+
+        </LinearLayout>
 
         <RadioGroup
             android:id="@+id/grupoBTN"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:checkedButton="@+id/equalsBTN"
             android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/equalsBTN"
+                style="@android:style/Widget.CompoundButton.RadioButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Equals" />
+                android:text="@string/iguales"
+                android:textColor="#ffffff" />
 
             <RadioButton
                 android:id="@+id/topBTN"
+                style="@android:style/Widget.CompoundButton.RadioButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Top" />
+                android:text="@string/top"
+                android:textColor="#ffffff" />
 
             <RadioButton
                 android:id="@+id/friendsBTN"
+                style="@android:style/Widget.CompoundButton.RadioButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Friends" />
+                android:text="@string/amigos"
+                android:textColor="#ffffff" />
 
             <RadioButton
                 android:id="@+id/lastBTN"
+                style="@android:style/Widget.CompoundButton.RadioButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Online" />
+                android:text="@string/online"
+                android:textColor="#ffffff" />
         </RadioGroup>
 
     </LinearLayout>
@@ -83,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:background="@color/colorPrimaryDark"
+        android:background="#303030"
         android:orientation="horizontal">
 
         <EditText
@@ -92,7 +130,7 @@
             android:layout_height="match_parent"
             android:layout_weight="90"
             android:ems="10"
-            android:hint="Buscar Jugador"
+            android:hint="@string/buscar"
             android:inputType="textPersonName"
             android:textColor="@android:color/background_light"
             android:textColorHint="@android:color/background_light"
@@ -123,7 +161,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="20"
-        android:background="@color/colorPrimaryDark"
+        android:background="#303f9f"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -141,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="80"
                 android:ems="10"
-                android:hint="Mensajes"
+                android:hint="@string/mensajes"
                 android:inputType="textPersonName"
                 android:textColor="@android:color/background_light"
                 android:textColorHint="@android:color/background_light" />
@@ -187,7 +225,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:gravity="top|center_horizontal"
+                    android:gravity="top|center"
                     android:text="Jugador"
                     android:textAlignment="center"
                     android:textColor="@android:color/background_light"
@@ -197,23 +235,38 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/corona" />
 
                     <TextView
                         android:id="@+id/victoriasTV"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Victorias"
+                        android:text="0"
                         android:textAlignment="center"
                         android:textColor="@android:color/background_light" />
 
-                    <TextView
-                        android:id="@+id/derrotasTV"
-                        android:layout_width="match_parent"
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Derrotas"
+                        app:srcCompat="@drawable/derrotas" />
+
+                    <TextView
+                        android:id="@+id/derrotasTV"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="0"
                         android:textAlignment="center"
                         android:textColor="@android:color/background_light" />
                 </LinearLayout>
