--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,91 +7,131 @@
     android:orientation="vertical"
     tools:context="jlp.sim.LoginActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/puzzle" />
 
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Bienvenido a SIM"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="2">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Registro / Login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/animacion_fondo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="1dp" />
 
-    <EditText
-        android:id="@+id/usuario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="email"
-        android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="contraseña"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/apodo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Apodo (Será lo que aparezca en el juego)"
-        android:inputType="textPersonName" />
+    </FrameLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="20dp">
+        android:layout_weight="2"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
-        <Button
-            android:id="@+id/loginbtn"
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="top|center"
+            android:layout_weight="2"
+            app:srcCompat="@drawable/logo" />
+
+        <EditText
+            android:id="@+id/usuario"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:onClick="loggear"
-            android:text="LOGIN" />
+            android:ems="10"
+            android:hint="email"
+            android:inputType="textEmailAddress"
+            android:shadowColor="@android:color/holo_blue_light"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/holo_green_light"
+            android:textColorHint="@android:color/darker_gray"
+            android:textColorLink="@android:color/holo_blue_light" />
 
-        <Button
-            android:id="@+id/registbtn"
+        <EditText
+            android:id="@+id/password"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:onClick="registrar"
-            android:text="REGISTRAR" />
+            android:ems="10"
+            android:hint="contraseña"
+            android:inputType="textPassword"
+            android:shadowColor="@android:color/holo_blue_light"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/holo_green_light"
+            android:textColorHint="@android:color/darker_gray"
+            android:textColorLink="@android:color/holo_blue_light" />
 
+        <EditText
+            android:id="@+id/apodo"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Apodo"
+            android:inputType="textPersonName"
+            android:shadowColor="@android:color/holo_blue_light"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/holo_green_light"
+            android:textColorHint="@android:color/darker_gray"
+            android:textColorLink="@android:color/holo_blue_light" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.75"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/loginbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="loggear"
+                android:text="EMPEZAR" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="0dp" />
+
+            <Button
+                android:id="@+id/registbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="registrar"
+                android:text="REGISTRAR" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.5"
+            android:clickable="true"
+            android:onClick="resetpassword"
+            android:text="Recordar Contraseña"
+            android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
+            android:textSize="18sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adViewInicial"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:clickable="true"
-        android:onClick="resetpassword"
-        android:text="Recordar Contraseña"
-        android:textAlignment="center"
-        android:textSize="18sp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        app:adSize="BANNER"
+        app:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
 
 
-</LinearLayout>
+</RelativeLayout>
