--- a/app/src/main/res/layout/lista_principal.xml
+++ b/app/src/main/res/layout/lista_principal.xml
@@ -116,21 +116,37 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/corona" />
+
                 <TextView
                     android:id="@+id/listavictoriasTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Victorias"
-                    android:textAlignment="center" />
+                    android:text="0"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/derrotas" />
 
                 <TextView
                     android:id="@+id/listaderrotasTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Derrotas"
-                    android:textAlignment="center" />
+                    android:text="0"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
