--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,14 +22,15 @@
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="50dp"
         android:layout_weight="2"
         android:background="@android:color/transparent"
         android:gravity="center"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView11"
@@ -59,7 +60,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="contraseña"
+            android:hint="@string/contrase_a"
             android:inputType="textPassword"
             android:shadowColor="@android:color/holo_blue_light"
             android:textColor="@android:color/background_light"
@@ -93,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="loggear"
-                android:text="EMPEZAR" />
+                android:text="@string/empezar" />
 
             <Space
                 android:layout_width="10dp"
@@ -104,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="registrar"
-                android:text="REGISTRAR" />
+                android:text="@string/registrar" />
 
         </LinearLayout>
 
@@ -116,7 +117,7 @@
             android:layout_weight="0.5"
             android:clickable="true"
             android:onClick="resetpassword"
-            android:text="Recordar Contraseña"
+            android:text="@string/recordar"
             android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
