--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="monospace"
-                    android:text="Reto RPG"
+                    android:text="@string/app_name"
                     android:textAlignment="center"
                     android:textColor="#fff17a0a"
                     android:textSize="24sp" />
