--- a/app/src/main/res/layout/dialogo_resultado.xml
+++ b/app/src/main/res/layout/dialogo_resultado.xml
@@ -11,10 +11,10 @@
         android:id="@+id/finreto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" ... Fin Reto ... "
+        android:text="@string/fin_reto"
         android:textAlignment="center"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="48sp" />
+        android:textSize="36sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="10"
+            android:layout_weight="1"
             android:text="Tu Reto:"
             android:textAlignment="center" />
 
@@ -38,25 +38,26 @@
             android:id="@+id/resultado_jugador_IV"
             android:layout_width="72dp"
             android:layout_height="0dp"
-            android:layout_weight="35"
+            android:layout_margin="10dp"
+            android:layout_weight="2"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/resultadojugador_nombreTV"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="20"
-            android:text="Jugador"
+            android:layout_weight="1"
+            android:text="@string/jugador"
             android:textAlignment="center" />
 
         <TextView
             android:id="@+id/resultadojugador_puntosTV"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="35"
+            android:layout_weight="1"
             android:text="+ 10"
             android:textAlignment="center"
-            android:textSize="48sp" />
+            android:textSize="24sp" />
 
     </LinearLayout>
 
@@ -74,22 +75,23 @@
             android:id="@+id/textView37"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="10"
-            android:text="Resultado de tu Rival:"
+            android:layout_weight="1"
+            android:text="@string/resultado_de_tu_rival"
             android:textAlignment="center" />
 
         <ImageView
             android:id="@+id/resultado_rival_IV"
             android:layout_width="72dp"
             android:layout_height="0dp"
-            android:layout_weight="35"
+            android:layout_margin="10dp"
+            android:layout_weight="2"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/resultado_rival_nombreTV"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="20"
+            android:layout_weight="1"
             android:text="Rival"
             android:textAlignment="center" />
 
@@ -97,10 +99,10 @@
             android:id="@+id/resultado_rival_puntosTV"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="35"
+            android:layout_weight="1"
             android:text="- 1"
             android:textAlignment="center"
-            android:textSize="48sp" />
+            android:textSize="24sp" />
 
 
     </LinearLayout>
@@ -110,5 +112,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:srcCompat="@android:drawable/ic_menu_compass" />
+        app:srcCompat="@drawable/flecha" />
 </LinearLayout>
