--- a/app/src/main/res/layout/dialogo_reto.xml
+++ b/app/src/main/res/layout/dialogo_reto.xml
@@ -13,7 +13,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="..... ¡¡Acepta el Reto!! ....."
+        android:text="@string/acepta_el_reto"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp" />
@@ -44,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Nombre Rival"
+            android:text="@string/nombre_rival"
             android:textAlignment="center"
             android:textSize="18sp" />
 
@@ -99,7 +99,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vence a tu Rival usando..."
+        android:text="@string/vence_a_tu_rival_usando"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="24sp" />
@@ -120,7 +120,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Fuerza"
+            android:text="@string/fuerza"
             android:textAlignment="center"
             android:textSize="14sp" />
 
@@ -129,7 +129,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Inteligencia"
+            android:text="@string/inteligencia"
             android:textAlignment="center"
             android:textSize="14sp" />
 
@@ -138,7 +138,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Magia"
+            android:text="@string/magia"
             android:textAlignment="center"
             android:textSize="14sp" />
 
@@ -154,21 +154,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_edit" />
+            app:srcCompat="@drawable/fuertebtn" />
 
         <ImageButton
             android:id="@+id/inteligdialogBTN"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_view" />
+            app:srcCompat="@drawable/ideabtn" />
 
         <ImageButton
             android:id="@+id/magiadialogBTN"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_directions" />
+            app:srcCompat="@drawable/magiastarbtn" />
 
 
     </LinearLayout>
