--- a/app/src/main/res/layout/lista_principal.xml
+++ b/app/src/main/res/layout/lista_principal.xml
@@ -41,9 +41,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="9"
-                    android:text="Jugador"
+                    android:text="@string/jugador"
                     android:textAlignment="center"
-                    android:textSize="30sp" />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -58,14 +58,14 @@
                 <ImageView
                     android:id="@+id/imageView3"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="30dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/fuerte" />
 
                 <TextView
                     android:id="@+id/fuerzatxt"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:gravity="center"
                     android:text="S"
@@ -75,14 +75,14 @@
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="30dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/idea" />
 
                 <TextView
                     android:id="@+id/inteligenciatxt"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:gravity="center"
                     android:text="I"
@@ -92,14 +92,14 @@
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="30dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/magiastar" />
 
                 <TextView
                     android:id="@+id/magiatxt"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:gravity="center"
                     android:text="M"
@@ -163,7 +163,7 @@
                     android:layout_weight="1"
                     android:text="mensajes"
                     android:textAlignment="center"
-                    android:textSize="24sp" />
+                    android:textSize="14sp" />
             </LinearLayout>
 
         </LinearLayout>
